# VRAMancer

./: .coverage  .flake8  .gitignore  .hm_state.pkl  .pre-commit-config.yaml  7.md  AMELIORATIONS_GPU_ADAPTATIF.md  AUDIT_ET_DMG_RESUME.md  Arbitrage opus  BENCHMARK_RESULTS.md  BENCH_ESTIMATION_5070TI_7900XT.md  CHANGELOG.md  CODE_REVIEW_ARCHITECTE_V5.md  COMPTE_RENDU_ARCHITECTE_PHASE7_DEEPSEEK.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  Commande_Windows.txt  Consolidation.md  DEEPSEEK_P2P_IPC_POUR_OPUS.md  DIAGNOSTIC_INTERFACES_20-23_FINAL.txt  Dockerfile  EXAMPLES.md  EXAMPLES_CLUSTER.md  FEATURES.md  FICHIERS_BAT_DISPONIBLES_ZIP.md  FICHIERS_BAT_DOCUMENTATION.txt  FICHIERS_BAT_WINDOWS.md  FICHIERS_LANCEMENT.md  Fable.md  GUIDE_GITHUB_RELEASE.md  GUIDE_INSTALLATION_MACOS.md  GUIDE_LANCEMENT_CORRECT.md  GUIDE_LANCEMENT_POST_TELECHARGEMENT.md  INSTALL_MAC.md  INSTALL_MACOS_QUICK.md  INSTALL_WINDOWS.md  Install VRAMancer.bat  Install VRAMancer.command  Install.sh  LANCEMENT_RAPIDE.md  (+209 more)
.github/: copilot-instructions.md
.hm_cache/: 0ecde0f5-86de-420b-ab17-3bc57dbcbf99.pkl
.venv2/: pyvenv.cfg
.venv3/: pyvenv.cfg
.venv4/: pyvenv.cfg
Debian/: control  postinst  vramancer.desktop  vrm  vrmancer.desktop
_deprecated/: README.md  __init__.py  _test_kernel.py  adaptive_routing.py  bench_awq.py  bench_cuda_graph_v2.py  bench_cuda_graphs.py  bench_graph3.py  bench_graph4.py  bench_turbo_7b_fp16.py  bench_turbo_gptq.py  bench_turbo_gptq2.py  bench_ultimate.py  holographic_memory.py  interface_selector.py  mac_echo_backup  remote_access.py  resource_aggregator.py  swarm_ledger.py  triton_gemv_awq.py  webgpu_node.py
archive/: dashboardcli.py  gui.py  monitor.py
benchmarks/: BENCHMARK_RESULTS.md  RESULTS_INDEX.md  _fp8_kv_worker.py  bench_14b_nvfp4_blackwell.py  bench_14b_turbo.py  bench_3node.py  bench_5070ti.py  bench_a1_path2_vs_accelerate.py  bench_anycast_routing.py  bench_awq_only.py  bench_awq_vs_nf4.py  bench_batcher_concurrent.py  bench_bigpu_results.json  bench_blackwell_e2e.py  bench_cluster_router.py  bench_concurrent.py  bench_context_scaling.py  bench_cross_node_live.py  bench_cross_node_transfer.py  bench_deepseek_engram.py  bench_deepseek_flash_gguf.py  bench_devstral_turboquant.py  bench_disagg_prefill_decode.py  bench_dual_gpu.py  bench_fp8_kv_3090.py  bench_hetero_advantage.py  bench_heterogeneous.py  bench_hmac_rust_vs_python.py  bench_kv_migration.py  bench_lending_hetero_real.py  bench_lending_turboquant_load.py  bench_lending_vram_pressure.py  bench_llamacpp.py  bench_load_batcher.py  bench_max_tps.py  bench_mistral_medium_gguf.py  bench_nvfp4.py  bench_nvfp4_bypass.py  bench_nvfp4_results.json  bench_p2p_impact.py  (+47 more)
cli/: telemetry_cli.py
config/: docker-compose.yml  epyc-server.env  install_cluster.sh  laptop-i5.env  laptop-rtx4060.env  macbook-m4.env  proxmox-q35-vm.env  proxmox-server.env  vramancer-master.service  vramancer-worker.service
core/: Gpu_interface.py  __init__.py  alerts.py  auth_strong.py  auto_detect.py  backends.py  backends_deepspeed.py  backends_llamacpp.py  backends_ollama.py  backends_tensorrt.py  backends_vllm.py  backends_webgpu.py  benchmark.py  blackwell_quant.py  block_metadata.py  block_router.py  cluster_gateway.py  cluster_router.py  compressor.py  compute_engine.py  config.py  config_manager.py  continuous_batcher.py  cross_node.py  cross_vendor_bridge.py  cuda_graph_decode.py  doctor.py  env_flags.py  expert_pinning.py  fp4_cuda.py  fused_act_quant.py  gpu_fault_tolerance.py  gpu_interface.py  ha_replication.py  health.py  hetero_config.py  hierarchical_memory.py  holographic_memory.py  inference_pipeline.py  kv_quantizer.py  (+59 more)
csrc/: aitp_xdp_bypass.c  dmabuf_bridge.c  file_offload.cpp  fp4_gemv.cu  paged_attention_kernel.cu  rebar_mmap.c  software_cxl.cpp  swarm_core.cpp  turbo_forward.cpp  turboquant_kernel.cu  vtp_core.cpp  vtp_cuda.cu
dashboard/: __init__.py  apps.py  cli_dashboard.py  config_panel.py  dashboard_cli.py  dashboard_qt.py  dashboard_qt_old.py  dashboard_tk.py  dashboard_web.py  dashboard_web_advanced.py  launcher.py  theme.py  updater.py  visualizer.py
docs/: AITP_WHITEPAPER.md  AUDIT_25_MARS_2026.md  CLUSTER.md  CLUSTER_MDNS.md  COMPATIBILITY.md  CONTINUOUS_BATCHING.md  CORE_ENGINE.md  INSTALL_MAC.md  INSTALL_ULTRA_DEBUTANT.md  QUICKSTART.md  ROADMAP_PERFORMANCES.md  api.md  architecture.md  automation_api.md  coding_agents.md  digital_twin.md  fastpath.md  fastpath_native_plan.md  federated_learning.md  hybrid_cloud.md  no_code.md  operations.md  orchestrator.md  quickstart.md  roadmap_immediate.md  security_enterprise.md  unified_api.md
edge/: edge_agent.py
exampkes/: quickstart.py
examples/: automation_client.py  backend_demo.py  demo_vtp_inference.py  demo_webgpu_matmul.py  test_vtp_loopback.py  usb4_distributed_vram.py
experimental/: README.md  __init__.py  aitp_fec.py  aitp_protocol.py  cluster_discovery.py  hierarchical_memory.py  nat_traversal.py  vram_lending.py
gui/: dashboard.py
installers/: install_windows.bat  start_windows_all.bat
marketplace/: README.md  plugin_template.py
mobile/: dashboard_heterogeneous.py  dashboard_mobile.py
monitoring/: alerting_rules.yml  alertmanager.yml  grafana_dashboard.json  k8s-deployment-example.yaml  prometheus.yml
premium/: autotuner.py
release_bundle/: README.md  installer_gui.py  requirements.txt  systray_vramancer.py
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
scripts/: Installer_Windows.bat  api_autodetect.py  bench_gpu_ops.py  bench_qwen7b.py  bench_rtx4060.py  bootstrap_env.py  build_dmg.sh  build_executable.sh  build_live_usb.sh  check_production_ready.sh  diagnostics.py  error  error.txt  generate_swarm_config.py  md_to_pdf.py  prod_bootstrap.py  release.py  rescue_vram.sh  stress_cluster.py  tag_release.sh  test_compile.py  test_direct_cuda.py  test_gpu_ops.py  test_mps_mac.py  test_network_lan.py  test_rust_integration.py  validate_platform.py  vramancer-launcher.sh  vramancer_web_installer.py
tests/: Test_scheduler_dynamic.py  conftest.py  smoke.py  test_adaptive_routing.py  test_aitp.py  (+94 more)
(+404 files in other folders)
