[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "vramancer"
dynamic = ["version"]
description = "Run large AI models across multiple GPUs with smart memory balancing"
readme = "README.md"
authors = [ { name="Jérémie", email="contact@vramancer.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "flask>=3.0",
    "gunicorn>=21.0",
    "rich>=13.0",
    "prometheus-client>=0.20",
    "PyJWT>=2.8",
    "pydantic>=2.8",
    "requests>=2.32",
    "python-socketio>=5.10",
    "pycryptodome>=3.19"
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.30",
    "accelerate>=0.25",
    "nvidia-ml-py>=11.0"
]
gui = [
    "PyQt5>=5.15",
    "dash>=2.14",
    "plotly>=5.18"
]
vision = [
    "torchvision>=0.15"
]
compression = [
    "lz4>=4.0",
    "zstandard>=0.22"
]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20"
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "flake8>=7.1"
]
dev = [
    "pip-tools",
    "mypy",
    "black",
    "isort"
]
full = [
    "vramancer[gpu,gui,vision,compression,tracing]"
]
windows = [
    "vramancer[gpu,gui,compression]"
]

[project.scripts]
vramancer = "vramancer.main:main"
vramancer-api = "core.production_api:main"
vramancer-health = "core.health:main"

[tool.setuptools.dynamic]
version = {attr = "core.__version__"}

[tool.setuptools.packages.find]
include = ["core*", "vramancer*", "dashboard*"]

[project.urls]
Homepage = "https://github.com/thebloodlust/VRAMancer"

[tool.coverage.run]
source = ["core"]
omit = [
    "core/backends_deepspeed.py",
    "core/backends_tensorrt.py",
    "core/gpu_interface.py",
    "core/tokenizer.py",
    "core/health.py",
    "core/transfer_manager.py",
    "core/model_splitter.py",
    "core/layer_profiler.py",
    "core/stream_manager.py",
    "core/compute_engine.py",
    "core/scheduler.py",
    "core/monitor.py",
    "core/network/*",
    "core/orchestrator/*",
    "core/utils.py",
    "core/compressor.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except ImportError",
    "raise NotImplementedError",
]
