[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "vramancer"
dynamic = ["version"]
description = "Run large AI models across multiple GPUs with smart memory balancing"
readme = "README.md"
authors = [ { name="Jérémie", email="contact@vramancer.dev" } ]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "maturin>=1.5",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "flask>=3.0",
    "gunicorn>=21.0",
    "rich>=13.0",
    "prometheus-client>=0.20",
    "PyJWT>=2.8",
    "pydantic>=2.8",
    "requests>=2.32",
    "python-socketio>=5.10",
    "pycryptodome>=3.19",
    "huggingface_hub>=0.16"
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.30",
    "accelerate>=0.25",
    "peft>=0.18.2",
    "nvidia-ml-py>=11.0"
]
gui = [
    "PyQt5>=5.15",
    "dash>=2.14",
    "plotly>=5.18",
    "flask-socketio>=5.3",
    "python-engineio>=4.11"
]
vision = [
    "torchvision>=0.15"
]
compression = [
    "lz4>=4.0",
    "zstandard>=0.22"
]
tracing = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20"
]
quantization = [
    "bitsandbytes>=0.43",
    "optimum>=1.17"
]
gguf = [
    "llama-cpp-python>=0.3.0"
]
coding = [
    # Agent de code local : CLI + serveur GGUF (llama.cpp). `pip install vramancer[coding]`.
    "llama-cpp-python>=0.3.0"
]
cluster = [
    "zeroconf>=0.130",
    "pyudev>=0.24; sys_platform == 'linux'"
]
automation = [
    "graphene>=3.3",
    "flask-cors>=4.0"
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "flake8>=7.1"
]
dev = [
    "pip-tools",
    "mypy",
    "black",
    "isort"
]
full = [
    "vramancer[gpu,gui,vision,compression,tracing,quantization,gguf,automation,cluster]"
]
windows = [
    "vramancer[gpu,gui,compression,quantization]"
]

[project.scripts]
vramancer = "vramancer.main:main"
vramancer-api = "core.production_api:main"
vramancer-health = "core.health:main"

[tool.setuptools.dynamic]
version = {attr = "core.__version__"}

[tool.setuptools.packages.find]
include = ["core*", "vramancer*", "dashboard*", "experimental*"]
exclude = ["_deprecated*", "tests*", "benchmarks*", "rust_core*", "csrc*", "docs*"]

[project.urls]
Homepage = "https://github.com/thebloodlust/VRAMancer"

[tool.coverage.run]
source = ["core"]
omit = [
    "core/backends_deepspeed.py",
    "core/backends_tensorrt.py",
    "core/gpu_interface.py",
    "core/model_splitter.py",
    "core/layer_profiler.py",
    "core/compute_engine.py",
    "core/network/network_transport.py",
    "core/backends_vllm.py",
    "core/backends_ollama.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "except ImportError",
    "raise NotImplementedError",
]
