# setup.cfg
[metadata]
name = vrc_inference
version = 0.1.0
description = GPU‑aware inference framework for GPT‑2‑style models
author = Your Name
author_email = you@example.com
url = https://github.com/your‑org/vrc_inference
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.9
install_requires =
    torch==2.2.0
    numpy==1.26.0
    pyyaml==6.0.1
    psutil==5.9.8
    transformers==4.34.0
    accelerate==0.27.2
    flask==3.0.2
    dash==2.15.0
    plotly==5.22.0
    python-socketio==5.11.1
    nvidia-ml-py==11.525.112
    PyQt5==5.15.9
    torchvision==0.17.0
    pycryptodome==3.20.0
    setuptools==69.0.3

[options.extras_require]
test =
    pytest
    pytest-cov
    flake8
dev =
    pip-tools
    mypy
    black
    isort

[options.entry_points]
console_scripts =
    vramancer = vramancer.main:main
    vramancer-health = core.health:main
