# setup.cfg
[metadata]
name = vramancer
version = attr: core.__version__
description = GPU-aware inference framework for GPT-2-style models
author = Jeremie
author_email = contact@vramancer.dev
url = https://github.com/thebloodlust/VRAMancer
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.9
install_requires =
    numpy>=1.24
    pyyaml>=6.0
    psutil>=5.9
    flask>=3.0
    gunicorn>=21.0
    rich>=13.0
    prometheus-client>=0.20
    PyJWT>=2.8

[options.extras_require]
gpu =
    torch>=2.0
    transformers>=4.30
    accelerate>=0.25
    nvidia-ml-py>=11.0
gui =
    PyQt5>=5.15
    dash>=2.14
    plotly>=5.18
vision =
    torchvision>=0.15
security =
    pycryptodome>=3.19
    python-socketio>=5.10
compression =
    lz4>=4.0
    zstandard>=0.22
tracing =
    opentelemetry-api>=1.20
    opentelemetry-sdk>=1.20
    opentelemetry-exporter-otlp>=1.20
test =
    pytest
    pytest-cov
    flake8
dev =
    pip-tools
    mypy
    black
    isort
server =
    lz4>=4.0
    zstandard>=0.22
    opentelemetry-api>=1.20
    opentelemetry-sdk>=1.20
    opentelemetry-exporter-otlp>=1.20
lite =
    # minimal CLI runtime (no GUI, vision, tracing)
all =
    PyQt5>=5.15
    dash>=2.14
    plotly>=5.18
    torchvision>=0.15
    lz4>=4.0
    zstandard>=0.22
    opentelemetry-api>=1.20
    opentelemetry-sdk>=1.20
    opentelemetry-exporter-otlp>=1.20
    pip-tools
    mypy
    black
    isort

[options.entry_points]
console_scripts =
    vramancer = vramancer.main:main
    vramancer-api = core.production_api:main
    vramancer-health = core.health:main
