[package]
name = "vramancer_rust"
version = "0.1.0"
edition = "2021"
authors = ["TheBloodlust <contact@vramancer.dev>"]
description = "Noyau haute performance en Rust pour VRAMancer (Zero-Trust P2P)"

[lib]
name = "vramancer_rust"
# "cdylib" indique que nous voulons compiler une bibliothèque dynamique (C-compatible) pour Python
crate-type = ["cdylib"]

[dependencies]
# PyO3 est la passerelle magique entre Rust et Python
pyo3 = { version = "0.20.0", features = ["extension-module"] }

# Pour notre preuve de concept : réécrire la validation HMAC en Rust 100x plus rapide
hmac = "0.12.1"
sha2 = "0.10.8"

# Pour l'Offensive Réseau (Zero-Copy P2P Asynchrone TCP)
tokio = { version = "1.36.0", features = ["full"] }

# Pour l'Offensive GPU (Zero-Copy Host-to-Device)
# Optionnel pour ne pas casser la compilation sur les vieux Mac/No-GPU
cudarc = { version = "0.11", features = ["cuda-12000"], optional = true }

# FFI directe vers libcuda.so pour les transferts GPU natifs
libloading = { version = "0.8", optional = true }

[features]
default = []
cuda = ["cudarc", "libloading"]
