[package]
name = "vramancer_rust"
version = "0.1.0"
edition = "2021"
authors = ["TheBloodlust <contact@vramancer.dev>"]
description = "Noyau haute performance en Rust pour VRAMancer (Zero-Trust P2P)"

[lib]
name = "vramancer_rust"
# "cdylib" indique que nous voulons compiler une bibliothèque dynamique (C-compatible) pour Python
crate-type = ["cdylib"]

[dependencies]
# PyO3: Rust <-> Python bindings (extension module)
pyo3 = { version = "0.20.0", features = ["extension-module"] }

# HMAC validation in Rust (faster than the Python hmac module)
hmac = "0.12.1"
sha2 = "0.10.8"

# Pour l'Offensive Réseau (Zero-Copy P2P Asynchrone TCP).
# Features minimales réellement utilisées (cf. usages dans lib.rs) plutôt que
# "full" : net (TcpStream/Listener), io-util (AsyncReadExt read_u64/read_exact),
# rt-multi-thread (Runtime::new), sync (Semaphore), time (timeout).
tokio = { version = "1.36.0", features = ["net", "io-util", "rt-multi-thread", "sync", "time"] }

# FFI directe vers libcuda.so pour les transferts GPU natifs (module cuda_ffi).
libloading = { version = "0.8", optional = true }

# Lazy static pour le vocabulaire du tokenizer
once_cell = "1.19"

# Socket options (SO_RCVBUF/SO_SNDBUF) on Linux
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = []
cuda = ["libloading"]

# Build release optimisé pour une cdylib (binaire plus petit/rapide).
# NB : PAS de `panic = "abort"` — pyo3 capture les panics à la frontière FFI
# pour les convertir en exceptions Python ; abort tuerait tout le process.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
